--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "element-ui": "^2.11.1",
+    "flex.css": "^1.1.7",
+    "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
+    "sass-loader": "^7.2.0",
     "vue": "^2.6.10",
+    "vue-i18n": "^8.14.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
