--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.11.1",
     "flex.css": "^1.1.7",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "sass-loader": "^7.2.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.0",
