--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.2.1",
     "element-ui": "^2.11.1",
     "flex.css": "^1.1.7",
     "js-cookie": "^2.2.1",
@@ -17,6 +18,8 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "sass-loader": "^7.2.0",
+    "script-ext-html-webpack-plugin": "^2.1.4",
+    "svg-sprite-loader": "^4.1.6",
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.0",
     "vue-router": "^3.0.3",
