--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,9 @@ ENV = 'development'
 
 # base api
 VUE_APP_BASE_API = 'https://i.ixex.pro/'
+VUE_APP_WS_API = 'wss://ws.ixex.io/v1/'
+
+
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
