--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "big": "^0.5.2",
+    "clipboard": "^2.0.4",
     "core-js": "^2.6.5",
     "echarts": "^4.2.1",
     "element-ui": "^2.11.1",
     "flex.css": "^1.1.7",
+    "highcharts": "^7.1.3",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
