--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,8 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'https://i.ixex.pro/'
+VUE_APP_BASE_API_Q = 'https://q.ixex.pro/'
+VUE_APP_BASE_API_I = 'https://i.ixex.pro/'
 VUE_APP_WS_API = 'wss://ws.ixex.io/v1/'
 
 
