--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "big": "^0.5.2",
     "clipboard": "^2.0.4",
     "core-js": "^2.6.5",
+    "countup": "^1.8.2",
     "echarts": "^4.2.1",
     "element-ui": "^2.11.1",
     "flex.css": "^1.1.7",
