--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^2.11.1",
     "flex.css": "^1.1.7",
     "highcharts": "^7.1.3",
+    "hover.css": "^2.3.2",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
