--- a/.env.development
+++ b/.env.development
@@ -2,9 +2,9 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API_Q = 'https://q.ixex.pro/'
-VUE_APP_BASE_API_I = 'https://i.ixex.pro/'
-VUE_APP_WS_API = 'wss://ws.ixex.io/v1/'
+VUE_APP_BASE_API_Q = 'https://q.ixex.pro'
+VUE_APP_BASE_API_I = 'https://i.ixex.pro'
+VUE_APP_WS_API = 'wss://ws.ixex.io/v1'
 
 
 
