--- a/.env.production
+++ b/.env.production
@@ -2,8 +2,9 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API_Q = 'https://q.ixex.pro'
-VUE_APP_BASE_API_I = 'https://i.ixex.pro'
+VUE_APP_BASE_API = 'https://i.ixex.io'
+VUE_APP_BASE_API_Q = 'https://q.ixex.io'
+VUE_APP_PROXY_Q = '/proxy-dev-api'
 VUE_APP_WS_API = 'wss://ws.ixex.io/v1'
 
 
