--- a/.env.development
+++ b/.env.development
@@ -3,8 +3,9 @@ ENV = 'development'
 
 # base api
 
-VUE_APP_BASE_API = 'https://i.ixex.io'
-VUE_APP_BASE_API_Q = '/proxy-dev-api'
+VUE_APP_BASE_API = 'https://i.ixex.pro'
+VUE_APP_BASE_API_Q = 'https://q.ixex.pro'
+VUE_APP_PROXY_Q = '/proxy-dev-api'
 VUE_APP_WS_API = 'wss://ws.ixex.io/v1'
 
 
