--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ ENV = 'development'
 VUE_APP_BASE_API = 'https://i.ixex.pro'
 VUE_APP_BASE_API_Q = 'https://q.ixex.pro'
 VUE_APP_PROXY_Q = '/proxy-dev-api'
-VUE_APP_WS_API = 'wss://ws.ixex.io/v1'
+VUE_APP_WS_API = 'wss://ws.ixex.pro/v1'
 
 
 
