--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "reconnecting-websocket": "^4.2.0",
     "sass-loader": "^7.2.0",
     "script-ext-html-webpack-plugin": "^2.1.4",
     "svg-sprite-loader": "^4.1.6",
