--- a/.env.ixx-dev
+++ b/.env.ixx-dev
@@ -1,5 +1,4 @@
-# just a flag
-ENV = 'development'
+VUE_APP_SITE = 'ixx'
 
 # base api
 
@@ -19,3 +18,4 @@ VUE_APP_NEW_WS_API = 'wss://wss.ixex.pro/v1'
 # Detail:  https://github.com/vuejs/vue-cli/blob/dev/packages/@vue/babel-preset-app/index.js
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
+
