--- a/.env.ix-prod
+++ b/.env.ix-prod
@@ -1,5 +1,4 @@
-# just a flag
-ENV = 'development'
+VUE_APP_SITE = 'ix'
 
 # base api
 
@@ -9,8 +8,6 @@ VUE_APP_PROXY_Q = '/proxy-dev-api'
 VUE_APP_WS_API = 'wss://ws.ixex.pro/v1'
 VUE_APP_NEW_WS_API = 'wss://wss.ixex.pro/v1'
 
-
-
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
 # It only does one thing by converting all import() to require().
@@ -19,3 +16,4 @@ VUE_APP_NEW_WS_API = 'wss://wss.ixex.pro/v1'
 # Detail:  https://github.com/vuejs/vue-cli/blob/dev/packages/@vue/babel-preset-app/index.js
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
+
